--- a/.github/workflows/link-checker.yaml
+++ b/.github/workflows/link-checker.yaml
@@ -1,10 +1,11 @@
 name: Link validation
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
       - 'docs/**'
   workflow_dispatch:
-
 jobs:
   link-check:
     runs-on: ubuntu-latest
@@ -15,7 +16,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 300
-
       - name: Run linkchecker on Vercel preview
         run: |
           docker run --rm ghcr.io/linkchecker/linkchecker:latest \
