--- a/.github/workflows/link-checker.yaml
+++ b/.github/workflows/link-checker.yaml
@@ -5,6 +5,11 @@ on:
       - main
     paths:
       - 'docs/**'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'docs/**'
   workflow_dispatch:
 jobs:
   link-check:
