--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout the docs repo
         uses: actions/checkout@v4
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -30,5 +30,5 @@ jobs:
       - name: Run htmltest
         uses: wjdp/htmltest-action@master
         with:
-          config: .htmltest.yml
+          config: utils/htmltest/.htmltest.yml
           path: build
