Remove crossplane how-tos (#939)
* Remove crossplane how-tos

* update read-time script

Signed-off-by: Rae Sharp <resharp20@gmail.com>

* update redirects, remove read-time

* fix redirects file

* bracket

* how-tos title

---------

Signed-off-by: Rae Sharp <resharp20@gmail.com>
Signed-off-by: rae sharp <8883519+tr0njavolta@users.noreply.github.com>

--- a/vercel.json
+++ b/vercel.json
@@ -1562,6 +1562,31 @@
             "permanent": true
         },
         {
+            "source": "/docs/manuals/uxp/howtos/self-managed-uxp/configure-packages(/)?",
+            "destination": "/docs/manuals/uxp/howtos/configure-packages/",
+            "permanent": true
+        },
+        {
+            "source": "/docs/manuals/uxp/howtos/self-managed-uxp/license-management(/)?",
+            "destination": "/docs/manuals/uxp/howtos/license-management/",
+            "permanent": true
+        },
+        {
+            "source": "/docs/manuals/uxp/howtos/self-managed-uxp/provider-vpa(/)?",
+            "destination": "/docs/manuals/uxp/howtos/provider-vpa/",
+            "permanent": true
+        },
+        {
+            "source": "/docs/manuals/uxp/howtos/self-managed-uxp/usage-metering(/)?",
+            "destination": "/docs/manuals/uxp/howtos/usage-metering/",
+            "permanent": true
+        },
+        {
+            "source": "/docs/manuals/uxp/howtos/self-managed-uxp/uxp-deployment(/)?",
+            "destination": "/docs/manuals/uxp/howtos/uxp-deployment/",
+            "permanent": true
+        },
+        {
             "source": "/manuals/uxp/guides/self-managed-uxp/license-management(/)?",
             "destination": "/manuals/uxp/howtos/self-managed-uxp/license-management/",
             "permanent": true
