--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "upbound-docs",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "npm run process-crds && docusaurus start",
-    "build": "npm run process-crds && docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "process-crds": "node scripts/process-crds.js",
-    "write-heading-ids": "docusaurus write-heading-ids"
-  },
-  "dependencies": {
-    "@docusaurus/core": "3.7.0",
-    "@docusaurus/plugin-client-redirects": "3.7.0",
-    "@docusaurus/plugin-content-docs": "3.7.0",
-    "@docusaurus/plugin-google-gtag": "^3.8.1",
-    "@docusaurus/preset-classic": "3.7.0",
-    "@docusaurus/theme-live-codeblock": "3.7.0",
-    "@docusaurus/theme-mermaid": "3.7.0",
-    "@docusaurus/theme-search-algolia": "3.7.0",
-    "@mdx-js/react": "^3.0.0",
-    "clsx": "^2.1.1",
-    "docusaurus-pushfeedback": "^1.0.5",
-    "js-yaml": "^4.1.0",
-    "lucide-react": "^0.525.0",
-    "prism-react-renderer": "^2.3.0",
-    "pushfeedback-react": "^0.1.65",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.7.0",
-    "@docusaurus/types": "3.7.0",
-    "yaml-loader": "^0.8.1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 3 chrome version",
-      "last 3 firefox version",
-      "last 5 safari version"
-    ]
-  },
-  "engines": {
-    "node": "22.x",
-    "npm": "9.x"
-  }
+    "name": "upbound-docs",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "docusaurus": "docusaurus",
+        "start": "npm run process-crds && docusaurus start",
+        "build": "npm run process-crds && docusaurus build",
+        "swizzle": "docusaurus swizzle",
+        "deploy": "docusaurus deploy",
+        "clear": "docusaurus clear",
+        "serve": "docusaurus serve",
+        "write-translations": "docusaurus write-translations",
+        "process-crds": "node scripts/process-crds.js",
+        "write-heading-ids": "docusaurus write-heading-ids"
+    },
+    "dependencies": {
+        "@docusaurus/core": "^3.9.1",
+        "@docusaurus/plugin-client-redirects": "^3.9.1",
+        "@docusaurus/plugin-content-docs": "^3.9.1",
+        "@docusaurus/plugin-google-gtag": "^3.8.1",
+        "@docusaurus/preset-classic": "^3.9.1",
+        "@docusaurus/theme-live-codeblock": "^3.9.1",
+        "@docusaurus/theme-mermaid": "^3.9.1",
+        "@docusaurus/theme-search-algolia": "^3.9.1",
+        "@mdx-js/react": "^3.0.0",
+        "clsx": "^2.1.1",
+        "docusaurus-pushfeedback": "^1.0.5",
+        "js-yaml": "^4.1.0",
+        "lucide-react": "^0.525.0",
+        "prism-react-renderer": "^2.3.0",
+        "pushfeedback-react": "^0.1.65",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "@docusaurus/module-type-aliases": "3.7.0",
+        "@docusaurus/types": "3.7.0",
+        "yaml-loader": "^0.8.1"
+    },
+    "browserslist": {
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 3 chrome version",
+            "last 3 firefox version",
+            "last 5 safari version"
+        ]
+    },
+    "engines": {
+        "node": ">=22.0.0",
+        "npm": ">=9.0.0"
+    }
 }
