--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "docusaurus": "docusaurus",
-        "start": "npm run process-crds && docusaurus start",
+        "start": "npm run process-crds && docusaurus start --host 0.0.0.0",
         "build": "npm run process-crds && docusaurus build",
         "swizzle": "docusaurus swizzle",
         "deploy": "docusaurus deploy",
