Fix Vale linting errors and broken authentication links
- Fix Vale linting errors in authentication.md:
  - Replace "e.g.," with "for example"
  - Wrap "cron" in backticks

- Fix broken links to old provider authentication pages:
  - Update migrate-hcl.md with new authentication anchors
  - Update migrate-provider-tf.md with new authentication anchors
  - Update provider-authentication.md (UXP concepts) links
  - Update oidc.md with new OIDC authentication anchors

- Update vercel.json redirects:
  - Redirect old /providers/provider-*/authentication paths
  - Redirect old /manuals/packages/providers/provider-*/authentication paths
  - All redirects now point to unified /manuals/packages/providers/authentication

All links now point to the unified authentication page with appropriate section anchors.

--- a/vercel.json
+++ b/vercel.json
@@ -237,7 +237,12 @@
         },
         {
             "source": "/providers/provider-aws/authentication(/)?",
-            "destination": "/manuals/packages/providers/provider-aws/authentication",
+            "destination": "/manuals/packages/providers/authentication#aws-authentication",
+            "permanent": true
+        },
+        {
+            "source": "/manuals/packages/providers/provider-aws/authentication(/)?",
+            "destination": "/manuals/packages/providers/authentication#aws-authentication",
             "permanent": true
         },
         {
@@ -247,7 +252,12 @@
         },
         {
             "source": "/providers/provider-azure/authentication(/)?",
-            "destination": "/manuals/packages/providers/provider-azure/authentication",
+            "destination": "/manuals/packages/providers/authentication#azure-authentication",
+            "permanent": true
+        },
+        {
+            "source": "/manuals/packages/providers/provider-azure/authentication(/)?",
+            "destination": "/manuals/packages/providers/authentication#azure-authentication",
             "permanent": true
         },
         {
@@ -267,7 +277,12 @@
         },
         {
             "source": "/providers/provider-gcp/authentication(/)?",
-            "destination": "/manuals/packages/providers/provider-gcp/authentication",
+            "destination": "/manuals/packages/providers/authentication#gcp-authentication",
+            "permanent": true
+        },
+        {
+            "source": "/manuals/packages/providers/provider-gcp/authentication(/)?",
+            "destination": "/manuals/packages/providers/authentication#gcp-authentication",
             "permanent": true
         },
         {
@@ -282,7 +297,12 @@
         },
         {
             "source": "/providers/provider-kubernetes/authentication(/)?",
-            "destination": "/manuals/packages/providers/provider-kubernetes/authentication",
+            "destination": "/manuals/packages/providers/authentication#kubernetes-authentication",
+            "permanent": true
+        },
+        {
+            "source": "/manuals/packages/providers/provider-kubernetes/authentication(/)?",
+            "destination": "/manuals/packages/providers/authentication#kubernetes-authentication",
             "permanent": true
         },
         {
