--- a/docs/reference/apis/query-api/yaml/spaces.upbound.io_groupqueries.yaml
+++ b/docs/reference/apis/query-api/yaml/spaces.upbound.io_groupqueries.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: groupqueries.spaces.upbound.io
 spec:
   group: spaces.upbound.io
@@ -222,6 +222,7 @@ spec:
                               more detailed description.
                             items: {}
                             type: array
+                            x-kubernetes-list-type: atomic
                           conditions:
                             description: |-
                               conditions describe additional status of a row that are relevant for a human user. These conditions
@@ -256,6 +257,7 @@ spec:
                               - type
                               type: object
                             type: array
+                            x-kubernetes-list-type: atomic
                           object:
                             description: |-
                               This field contains the requested additional information about each object based on the includeObject
@@ -414,6 +416,10 @@ spec:
                 description: |-
                   freshness specifies resource versions per control plane to wait for before
                   returning results. It's helpful to ensure consistency for read-after-write.
+
+                  Deprecated: Freshness is unsupported in Spaces v1.15+ and in standalone
+                  UXP control planes. Queries setting freshness will return an error in
+                  versions where freshness is unsupported.
                 items:
                   description: |-
                     Freshness specifies a resource version per control plane to wait for before
