--- a/vercel.json
+++ b/vercel.json
@@ -1324,6 +1324,26 @@
             "source": "/manuals/uxp/guides/self-managed-uxp/license-management(/)?",
             "destination": "/manuals/uxp/howtos/self-managed-uxp/license-management/",
             "permanent": true
+        },
+        {
+            "source": "/guides/solutions/general-idp/get-started(/)?",
+            "destination": "/guides/solutions/get-started/",
+            "permanent": true
+        },
+        {
+            "source": "/guides/solutions/general-idp/design(/)?",
+            "destination": "/guides/solutions/design/",
+            "permanent": true
+        },
+         {
+            "source": "/guides/solutions/general-idp/portal(/)?",
+            "destination": "/guides/solutions/portal/",
+            "permanent": true
+        },
+         {
+            "source": "/guides/solutions/general-idp/deploy-apis(/)?",
+            "destination": "/guides/solutions/deploy-apis/",
+            "permanent": true
         }
     ]
 }
