feat(navbar): integrate Upbound unified navigation theme
- Add @upbound/elements package for consistent navbar components
- Implement custom Navbar/Content with unified Upbound branding
- Add session and feature flags providers for auth integration
- Configure custom hooks (useFeatureFlags, useSessionHooks)
- Update search bar styling to match unified theme
- Add TypeScript configuration and type definitions

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,6 @@ cache-verify=true
 legacy-peer-deps=true
 fetch-retry-mintimeout=20000
 fetch-retry-maxtimeout=120000
+
+# npmjs registry for @upbound packages
+@upbound:registry=https://registry.npmjs.org
