--- a/package.json
+++ b/package.json
@@ -24,9 +24,19 @@
         "@docusaurus/theme-mermaid": "^3.9.1",
         "@docusaurus/theme-search-algolia": "^3.9.1",
         "@mdx-js/react": "^3.0.0",
+        "@openfeature/core": "1.5.0",
+        "@openfeature/launchdarkly-client-provider": "0.3.1",
+        "@openfeature/react-sdk": "0.4.8",
+        "@openfeature/web-sdk": "1.3.2",
+        "@tanstack/react-query": "^5.90.12",
+        "@upbound/api": "0.0.1",
+        "@upbound/elements": "0.0.1",
+        "@upbound/utils": "0.0.1",
+        "@upbound/ux": "0.0.1",
         "clsx": "^2.1.1",
         "docusaurus-pushfeedback": "^1.0.5",
         "js-yaml": "^4.1.0",
+        "launchdarkly-js-client-sdk": "3.5.0",
         "lucide-react": "^0.525.0",
         "prism-react-renderer": "^2.3.0",
         "pushfeedback-react": "^0.1.65",
@@ -34,8 +44,13 @@
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@docusaurus/module-type-aliases": "3.7.0",
-        "@docusaurus/types": "3.7.0",
+        "@docusaurus/module-type-aliases": "3.9.1",
+        "@docusaurus/types": "3.9.1",
+        "autoprefixer": "^10.4.22",
+        "esbuild-loader": "^4.4.0",
+        "postcss": "^8.5.6",
+        "process": "^0.11.10",
+        "tailwindcss": "^4.1.17",
         "yaml-loader": "^0.8.1"
     },
     "browserslist": {
@@ -53,5 +68,12 @@
     "engines": {
         "node": ">=22.0.0",
         "npm": ">=9.0.0"
+    },
+    "overrides": {
+        "@openfeature/core": "1.5.0",
+        "@openfeature/react-sdk": "0.4.8",
+        "@openfeature/web-sdk": "1.3.2",
+        "@openfeature/launchdarkly-client-provider": "0.3.1",
+        "launchdarkly-js-client-sdk": "3.5.0"
     }
 }
